--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "match-rules": "*"
+    "match-rules": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
